tests/test_assets/semantic/valid/control_flow/break_continue.cog
break_continue_valid::(keep_going, done: bool) -> void {
    while keep_going {
        if done {
            break;
        }

        continue;
    }
}