tests/test_assets/semantic/invalid/void_values/condition.cog
does_nothing::() -> void {
}

test::() -> void {
    if does_nothing() {
    }
}